fix button text alignment in store add to cart modal

--- a/assets/scss/_store.scss
+++ b/assets/scss/_store.scss
@@ -322,6 +322,9 @@ body.store-event{
 		}
 		.btn {
 			width:100%;
+			padding-left:0;
+			padding-right:0;
+			text-align:center;
 			@media (max-width: 767px) {
 				margin-top: 20px
 			}
